@startuml
title Design Class Diagram - UnoLegends (Iterazione 1 & Foresight)
skinparam classAttributeIconSize 0

' Interfaces and abstract
abstract class Carta {
  -id : String
  +getId() : String
  +compatibileCon(cartaInCima : Carta) : boolean
  +toCliString() : String
}

interface RegoleDiGioco {
  +isGiocabile(candidata : Carta, inCima : Carta, partita : Partita) : boolean
}

class RegoleStandard {
  +isGiocabile(candidata : Carta, inCima : Carta, partita : Partita) : boolean
}

class CartaNumero {
  -colore : Colore
  -numero : int
}

class CartaSpeciale {
  -tipo : String
  -attributi : Map<String,Object>
}

' Domain actors / aggregates
class Giocatore {
  -nome : String
  +aggiungiCarta(carta : Carta) : void
  +estraiCarta(indice : int) : Carta
  +getCartaInPosizione(indice : int) : Carta
}

class Mazzo {
  +prelevaCarta() : Carta
}

class PilaDegliScarti {
  +aggiungiCarta(carta : Carta) : void
  +getCartaInCima() : Carta
}

class Partita {
  -turnoCorrente : int
  +getStatoTurno() : StatoTurno
  +giocaCarta(indice : int) : boolean
  +pescaCarta() : boolean
  +passaTurno() : boolean
}

class PartitaFactory <<Factory>> {
  +{static} creaPartitaStandard() : Partita
  +{static} creaPartita(numeroGiocatori : int) : Partita
}

abstract class MazzoFactory <<Abstract Factory>> {
  +getCarteNormali() : List<Carta>
  +creaMazzo(source : List<Carta>, startIndex : int, size : int) : Mazzo
}

class StandardMazzoFactory <<Factory, Singleton>> {
  -{static} instance : StandardMazzoFactory
  +{static} getInstance() : StandardMazzoFactory
  +getCarteNormali() : List<Carta>
  +creaMazzo(source : List<Carta>, startIndex : int, size : int) : Mazzo
}

class UnoLegendsGame <<Facade>> {
  +richiediStato() : StatoTurno
  +giocaCarta(indice : int) : boolean
  +pescaCarta() : boolean
  +passaTurno() : boolean
}

class StatoTurno {
  -nomeGiocatoreAttivo : String
  -deveGiocareCartaPescata : boolean
}

' relationships (Inheritance and Realization)
Carta <|-- CartaNumero
Carta <|-- CartaSpeciale
RegoleDiGioco <|.. RegoleStandard
MazzoFactory <|-- StandardMazzoFactory

' Navigability (Attribute visualization)
Giocatore "1" --> "*" Carta : mano
Mazzo "1" --> "*" Carta : contiene
PilaDegliScarti "1" --> "*" Carta : scarti

Partita "1" --> "2..4" Giocatore : giocatori
Partita "1" --> "1" Mazzo : mazzo
Partita "1" --> "1" PilaDegliScarti : scarti
Partita "1" --> "1" RegoleDiGioco : regole

UnoLegendsGame --> "1" Partita : partita

' StatoTurno Visual Attributes
StatoTurno --> "*" Carta : manoGiocatoreAttivo
StatoTurno --> "1" Carta : cartaInCima
StatoTurno --> "0..1" Carta : cartaAppenaPescata

' Creation and Dependency relationships
PartitaFactory ..> Partita : crea
PartitaFactory ..> MazzoFactory : usa
StandardMazzoFactory ..> Mazzo : crea

note "Design notes:\n- Sintassi UML standard applicata per attributi e metodi.\n- `RegoleDiGioco` is an interface Strategy/Policy; `RegoleStandard` is the default implementation injected into `Partita`.\n- `CartaSpeciale` represents extensibility for non-numeric cards (Iteration-2).\n- `MazzoFactory` is modeled as an Abstract Factory; `StandardMazzoFactory` implements the Singleton pattern and owns deck composition.\n- `PartitaFactory` is a Factory (GOF) / Creator (GRASP) for setup and selects the concrete deck factory during start-up.\n- `UnoLegendsGame` is Facade/Controller.\n" as N2

@enduml